fix scrollBar/artist

--- a/artist css/style.css
+++ b/artist css/style.css
@@ -10,12 +10,6 @@
   body {
     background-color: #101010;
   }
-  
-  .sections {
-    height: 100vh;
-    margin-bottom: 10vh;
-  }
-  
   .section_left,
   .section_right {
     background: #101010;
@@ -29,7 +23,6 @@
   .section_center {
     background: #121212;
     width: 65%;
-    overflow: scroll;
 }
 @media (max-width: 991px) {
     .section_center {
@@ -103,8 +96,24 @@
     font-size: 56px;
     font-weight: 700;
   }
+  .jumbotron{
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 .section_center .container{
   background: linear-gradient(180deg, rgba(34,34,34,1) 30%, rgba(18,18,18,1) 100%);
   color: white;
 }
+.div_scroll{
+  overflow-y: hidden;
+}
+.div_scroll::-webkit-scrollbar {
+  width: 9px;
+  }
+  .div_scroll::-webkit-scrollbar-track {
+  background-color: transparent;
+  }
+  .div_scroll::-webkit-scrollbar-thumb {
+  background-color: #b3b3b3;
+  }
   
